Добавил миграцию
Заметка:
У меня порт в композе, 5433 заменяется на стандарнтный 5432, но с внешки нужно 5433
